2008-03-06  David Athay  <ko2fan@gmail.com>

	* src/net/guildhandler.cpp, src/net/guildhandler.hpp: Fixed
	rejoining guilds after quitting.

2008-03-05  David Athay  <ko2fan@gmail.com>

	* src/game.cpp, src/gui/guildwindow.cpp: Fixed key presses during
	text dialog in guild window and changed license to standard GPL.
	* src/localplayer.cpp, src/localplayer.h, src/player.cpp,
	src/player.h, src/gui/guildwindow.cpp, src/net/guildhandler.cpp:
	Fixed guild creation.

2008-03-04  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/CMakeLists.txt, data/graphics/gui/CMakeLists.txt,
	data/fonts/CMakeLists.txt, data/CMakeLists.txt: Accepted patch by
	roderic to fix building/installing with CMake.

2008-03-03  Philipp Sehmisch  <tmw@crushnet.org>

	* src/localplayer.h: Added natural HP regeneration
	* src/net/beinghandler.cpp: Added 3 new death messages which were
	suggested by dabe and blueberry on the forum.

2008-03-03  Philipp Sehmisch  <tmw@crushnet.org>

	* src/gui/skill.cpp, src/gui/skill.h: Skill gui beautifications by
	roderic.
	* src/localplayer.cpp: Made skill names translateable.
	* data/graphics/sprites/monster-maggot.xml: Made maggot attack animation
	finite.

2008-03-01  Philipp Sehmisch  <tmw@crushnet.org>

	* src/gui/textdialog.cpp, src/gui/textdialog.h: Replaced the basic
	guichan text field class with our derivate class.
	
2008-02-27  Philipp Sehmisch  <tmw@crushnet.org>

	* src/net/beinghandler.cpp, src/net/gamehandler/player.cpp,
	src/net/gamehandler/player.h, src/net/protocol.h: Implemented player
	respawn.

2008-02-27  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* po/da.po, po/pt.po, po/ru.po, po/sv.po, po/tmw-da.po,
	po/tmw-pt.po, po/tmw-ru.po, po/tmw-sv.po, tmw.cbp: Fixed translation
	file names.
	* po/it.po: Some fixes by Shaili.

2008-02-24  Philipp Sehmisch  <tmw@crushnet.org>

	* src/gui/skill.cpp, src/gui/skill.h: Optical enhancements based on
	a patch by rodge.
	* src/net/playerhandler.cpp: Fixed a bug which caused an incorrect